added more to the main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,5 +28,21 @@
             <button type="button" class="btn btn-info">Sign Up</button>
         </div>
 
+        <div id="zipcodes">
+
+        </div>
+
+        <div id="howItWorks">
+
+        </div>
+
+        <div id="upcomingMeets">
+
+        </div>
+
+        <div id="footer">
+            
+        </div>
+
     </body>
 </html>
