--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../static/css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     </head>
 
     <body>
@@ -23,25 +24,159 @@
         </div>
 
         <div id="landingPage">
+
             <h1>Let's meet for a ride!</h1>
             <p class="mobileOnly">Let's meet <br> for a ride!</p>
             <button type="button" class="btn btn-info">Sign Up</button>
+
         </div>
 
-        <div id="zipcodes">
+        <div id="upcomingEvents">
 
+            <h1><b>Upcoming Meetups</b></h1>
+
+            <div class="event">
+
+                <img clsrc="../static/images/placeholder.png" alt="">
+
+                <div class="eventInfo">
+
+                    <p>Friday, December 25, 5:00 PM</p>
+
+                    <h1>San Jose, CA</h1>
+
+                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
+
+                    <div class="creator">
+                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="event">
+
+                <img clsrc="../static/images/placeholder.png" alt="">
+
+                <div class="eventInfo">
+
+                    <p>Saturday, December 25, 5:00 PM</p>
+
+                    <h1>San Francisco, CA</h1>
+
+                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
+
+                    <div class="creator">
+                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="event">
+
+                <img clsrc="../static/images/placeholder.png" alt="">
+
+                <div class="eventInfo">
+
+                    <p>Sunday, December 25, 5:00 PM</p>
+
+                    <h1>Big Bear Lake, CA</h1>
+
+                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
+
+                    <div class="creator">
+                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="event">
+
+                <img clsrc="../static/images/placeholder.png" alt="">
+
+                <div class="eventInfo">
+
+                    <p>Monday, December 25, 5:00 PM</p>
+
+                    <h1>American Canyon, CA</h1>
+
+                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
+
+                    <div class="creator">
+                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="event">
+
+                <img clsrc="../static/images/placeholder.png" alt="">
+
+                <div class="eventInfo">
+
+                    <p>Tuesday, December 25, 5:00 PM</p>
+
+                    <h1>San Luis Obispo, CA</h1>
+
+                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
+
+                    <div class="creator">
+                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="event">
+
+                <img clsrc="../static/images/placeholder.png" alt="">
+
+                <div class="eventInfo">
+
+                    <p>Wednesday, December 25, 5:00 PM</p>
+
+                    <h1>Los Angeles, CA</h1>
+
+                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
+
+                    <div class="creator">
+                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
+                    </div>
+
+                </div>
+
+            </div>
+                            
         </div>
 
         <div id="howItWorks">
 
-        </div>
+            <h1><b>How Meetups Work</b></h1>
 
-        <div id="upcomingMeets">
+            <div class="find">
+                <h3><i class="icon fas fa-search"></i> Discover Events</h3>
+                <p>See available events in your desired location.</p>
+                <a href="#"><b>Join 2Wheel Meetups</b><i class="arrow fas fa-arrow-right"></i></a>
+            </div>
+
+            <div class="create">
+                <h3><i class="icon2 fas fa-plus"></i> Start An Event</h3>
+                <p>Create your own meetup event, and draw from a riding community of hundreds.</p>
+                <a href="#"><b>Get Started</b><i class="arrow fas fa-arrow-right"></i></a>
+            </div>
 
         </div>
 
         <div id="footer">
-            
+
         </div>
 
     </body>
