--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 /* HEADER */
@@ -12,10 +13,10 @@
     width: 100%;
 }
 
-#header h1 {
+#header h1, h1 strong {
+    font-family: 'Pacifico', cursive;
     cursor: default;
     color: red;
-    font-family: "Cedarville Cursive", cursive;
 }
 
 #links {
@@ -79,15 +80,23 @@
 .event {
     overflow: auto;
     padding: 10px 10px 20px 10px;
-    margin: 15px;
     display: inline-block;
     vertical-align: top;
-    width: 20%;
+    width: 24%;
     box-shadow: 1px 1px 5px lightslategray;
     border-radius: 10px;
+    position: relative;
+}
+
+.creator {
+    position: absolute;
+    bottom: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 .creator p .userImage {
+    padding: 0px; 
     margin: 5px;
     width: 10%;
     height: 20%px;
@@ -101,9 +110,33 @@
     vertical-align: top;
 }
 
-.eventInfo  h1{
+.eventInfo  h1 {
+    font-size: 20pt;
+    width: 100%;
+    height: 30%;
     color: red;
     font-family: "Cedarville Cursive", cursive; 
+    position: flex;
+}
+
+.eventInfo p {
+    color: gray;
+    width: 100%;
+    height: 30%;
+    position: flex;
+}
+
+.eventInfo p b {
+    color: #313E47;
+    position: flex;
+}
+
+.eventInfo h3 {
+    color: #313E47;
+    margin-top: 30px;
+    width: 100%;
+    height: 80%;
+    position: flex;
 }
 
 /* HOW IT WORKS */
@@ -166,6 +199,15 @@ a b {
     display: inline-block;
 }
 
+#footer {
+    background-color: #363E47;
+    color: white;
+    width: 100%;
+    height: 45px;
+    text-align: center;
+    margin: 0px;
+    padding-top: 5px;
+}
 
 @media only screen and (max-width: 480px) {
     /* HEADER */
@@ -213,7 +255,16 @@ a b {
     /* UPCOMING EVENTS */
     .event {
         width: 85%;
-        margin: 20px 0px;
+        height: 200px;
+        margin: 30px 0px;
+    }
+
+    .eventInfo h1 {
+        margin-top: 15px;
+    }
+
+    .eventInfo h3 {
+        margin: 0px;
     }
 
     /* HOW IT WORKS */
@@ -229,17 +280,10 @@ a b {
         margin-top: 50px;
         display: block;
         text-align: center;
-    }
-    
+    }  
 }
 
 @media only screen and (min-width: 481px) {
-    /* UPCOMING EVENTS */
-    .event {
-        width: 40%;
-    }
-}
-@media only screen and (min-width: 700px) {
     /* LANDING PAGE */
     #landingPage {
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/tabletImage3.jpg");
@@ -270,7 +314,34 @@ a b {
 
     /* UPCOMING EVENTS */
     .event {
-        width: 25%;
+        margin: 40px;
+        width: 30%;
+        height: 200px;
+        font-size: 12px;
+    }
+
+    .eventInfo h3 {
+        font-size: 15pt;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .creator {
+        text-align: center;
+        margin: 0px;
+    }
+
+    .creator p  b {
+        margin-right: 25px;
+    }
+
+    .eventInfo h1 {
+        margin-top: 10px;
+        padding: 8px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     /* HOW IT WORKS */
@@ -284,7 +355,7 @@ a b {
 
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1080px) {
     /* HEADER */
     #header .links {
         margin-top: 20px;
@@ -319,8 +390,45 @@ a b {
         box-shadow: 1px 1px 6px rgb(0, 0, 0.5);
     }
 
+    /* EVENT */
     .event {
-        height: 500px;
+        margin: 15px;
+        height: 200px;
+        padding: 10px;
+        font-size: 12px;
+    }
+
+    .eventInfo {
+        padding: 0px;
+    }
+
+    .eventInfo p {
+        margin-top: 10px;
+    }
+
+    .eventInfo h1 {
+        height: 45px;
+        padding: 5px;
+        margin: 0px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .eventInfo h3 {
+        margin: 10px 0px;;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .creator {
+        text-align: center;
+        margin: 0px;
+    }
+
+    .creator p b {
+        margin-right: 15px;
     }
 }
 
