--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,11 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>2Wheel Meetups</title>
         <link rel="stylesheet" href="../static/css/index.css">
-        <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Josefin+Sans|Pacifico" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="../js/index.js"></script>
     </head>
 
     <body>
@@ -37,18 +39,14 @@
 
             <div class="event">
 
-                <img clsrc="../static/images/placeholder.png" alt="">
-
                 <div class="eventInfo">
 
                     <p>Friday, December 25, 5:00 PM</p>
 
-                    <h1>San Jose, CA</h1>
-
-                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
-
+                    <h3><b>San felipe: Meet at the parking lot area at Evergreen.</b></h3>
+                    <h1>San Jose</h1>
                     <div class="creator">
-                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
+                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by <b>Gustavo Arellano</b></p>
                     </div>
 
                 </div>
@@ -56,19 +54,17 @@
             </div>
 
             <div class="event">
-
-                <img clsrc="../static/images/placeholder.png" alt="">
 
                 <div class="eventInfo">
 
                     <p>Saturday, December 25, 5:00 PM</p>
 
-                    <h1>San Francisco, CA</h1>
+                    <h3><b>Bay Bridge - All the way to Half Moon Bay.</b></h3>
 
-                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
+                    <h1>San Francisco</h1>
 
                     <div class="creator">
-                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
+                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by <b>Gustavo Arellano</b></p>
                     </div>
 
                 </div>
@@ -76,39 +72,17 @@
             </div>
 
             <div class="event">
-
-                <img clsrc="../static/images/placeholder.png" alt="">
-
-                <div class="eventInfo">
-
-                    <p>Sunday, December 25, 5:00 PM</p>
-
-                    <h1>Big Bear Lake, CA</h1>
-
-                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
-
-                    <div class="creator">
-                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="event">
-
-                <img clsrc="../static/images/placeholder.png" alt="">
 
                 <div class="eventInfo">
 
                     <p>Monday, December 25, 5:00 PM</p>
 
-                    <h1>American Canyon, CA</h1>
+                    <h3><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda cupiditate repellendus porro ducimus aliquam. Dolor aliquam porro, illum esse voluptatibus sapiente iusto ea, nisi harum inventore impedit blanditiis atque! Consequatur.</b></h3>
 
-                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
+                    <h1>American Canyon</h1>
 
                     <div class="creator">
-                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
+                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by <b>Gustavo Arellano</b></p>
                     </div>
 
                 </div>
@@ -116,39 +90,17 @@
             </div>
 
             <div class="event">
-
-                <img clsrc="../static/images/placeholder.png" alt="">
 
                 <div class="eventInfo">
 
                     <p>Tuesday, December 25, 5:00 PM</p>
 
-                    <h1>San Luis Obispo, CA</h1>
+                    <h3><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda cupiditate repellendus porro ducimus aliquam. Dolor aliquam porro, illum esse voluptatibus sapiente iusto ea, nisi harum inventore impedit blanditiis atque! Consequatur.</b></h3>
 
-                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
-
-                    <div class="creator">
-                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="event">
-
-                <img clsrc="../static/images/placeholder.png" alt="">
-
-                <div class="eventInfo">
-
-                    <p>Wednesday, December 25, 5:00 PM</p>
-
-                    <h1>Los Angeles, CA</h1>
-
-                    <h3><b>SAN FELIPE: Start Near Evergreen College</b></h3>
+                    <h1>San Luis Obispo</h1>
 
                     <div class="creator">
-                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by Gustavo Arellano</p>
+                        <p><img class="userImage" src="../static/images/placeholder.png" alt=""> Hosted by <b>Gustavo Arellano</b></p>
                     </div>
 
                 </div>
@@ -176,7 +128,7 @@
         </div>
 
         <div id="footer">
-
+            <p>2Wheel Meetups &reg; by Gustavo Arellano<p>
         </div>
 
     </body>
