--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,6 +6,7 @@
 
 /* HEADER */
 #header {
+    background-color: whitesmoke;
     padding: 10px;
     display: flex;
     flex-wrap: wrap;
@@ -16,7 +17,7 @@
 #header h1, h1 strong {
     font-family: 'Pacifico', cursive;
     cursor: default;
-    color: red;
+    color: #F53756;
 }
 
 #links {
@@ -99,7 +100,7 @@
     padding: 0px; 
     margin: 5px;
     width: 10%;
-    height: 20%px;
+    height: 20%;
     display: inline-block;
     text-align: center;
     border-radius: 50%;
@@ -114,7 +115,7 @@
     font-size: 20pt;
     width: 100%;
     height: 30%;
-    color: red;
+    color: #F53756;
     font-family: "Cedarville Cursive", cursive; 
     position: flex;
 }
