--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
 
             <div id="links">
                 <ul>
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#">Sign Up</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li><a href="register.html">Sign Up</a></li>
                 </ul>
             </div>
         </div>
@@ -29,7 +29,7 @@
 
             <h1>Let's meet for a ride!</h1>
             <p class="mobileOnly">Let's meet <br> for a ride!</p>
-            <button type="button" class="btn btn-info">Sign Up</button>
+            <button type="button" class="btn btn-danger">Sign Up</button>
 
         </div>
 
