added road to nextMeetUp section

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -19,7 +19,7 @@
 
                 <div id="links">
                     <ul>
-                        <li><a href="login.html">Profile</a></li>
+                        <li><a href="userProfile.html">Profile</a></li>
                         <li><a href="explore.html">Explore</a></li>
                         <li><a href="upcoming.html">Upcoming Meetup</a></li>
                         <li><a href="index.html">Sign Out</a></li>
@@ -43,19 +43,19 @@
 
             <div id="mobileLinks">
 
-                <a href="index.html">
+                <a href="profile.html">
                     <i class="fas fa-user fa-2x"></i>
                     <p>Profile</p>
                 </a>
-                <a href="index.html">
+                <a href="explore.html">
                     <i class="fas fa-search fa-2x"></i>
                     <p>Explore</p>
                 </a>
-                <a href="index.html">
+                <a href="upcoming.html">
                     <i class="fas fa-calendar-alt fa-2x"></i>
                     <p>Upcoming</p>
                 </a>
-                <a href="index.html">
+                <a href="welcome.html">
                     <i class="fas fa-sign-out-alt fa-2x"></i>
                     <p>Sign Out</p>
                 </a>
@@ -98,6 +98,9 @@
                 <h1><b>San Felipe Road</b></h1>
                 <h5>San Jose, CA <br> <i class="fas fa-motorcycle"></i> 30 Riders Going</h5>
             </div>
+
+            <img class="roadImage" src="../static/images/roadImage.png" alt="">
+            
             <div class="icons">
                 <i class="fas fa-calendar-day"></i>
                 <br><br>
@@ -108,9 +111,9 @@
                 <br>
                 <h5><b>Evergreen Parking Lot A</b></h5>
                 <h5>3095 Yerba Buena Rd. <br> San Jose, CA 95127</h5>
+                
             </div>
-
-
+            <!-- <img class="roadImage" src="../static/images/roadImage.png" alt=""> -->
         </div>
 
         <!-- <div id="desktopUpcomingEvent"></div> -->
