--- a/static/css/index.css
+++ b/static/css/index.css
@@ -146,13 +146,13 @@
     background-color: #111720;
     color: white;
     text-align: center;
-    padding: 50px 10px 25px 0px;
+    padding: 50px 10px 50px 10px;
     width: 100%;
     text-decoration: none;
 }
 
 .find {
-    width: 40%;
+    width: 300px;
 }
 
 .find a:link {
@@ -164,14 +164,15 @@
 }
 
 .create {
-    width: 40%;
+    width: 300px;
 }
 
 .find, .create {
-    margin-top: 50px;
+    margin: 50px 100px;
     display: inline-block;
     vertical-align: top;
 }
+
 
 .arrow {
     margin-left: 25px;
@@ -210,25 +211,26 @@ a b {
     padding-top: 5px;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 491px) {
     /* HEADER */
     #header {
         background-color: white;
-        padding: 5px;
+        padding: auto;
         width: 100%;
+        height: 100px;
         opacity: 0.88;
     } 
 
-    #header h1, #links {
+    #header h1, h1 strong {
         margin: auto;
+        font-size: 25pt;
     }
 
-    #header h1{
+    #header h1, #links {
+        padding: auto;
+        text-align: center;
         display: block;
-    }
-
-    #header #links {
-        display: block;
+        width: 100%;
     }
 
     #links ul li a:hover {
@@ -284,7 +286,10 @@ a b {
     }  
 }
 
-@media only screen and (min-width: 481px) {
+@media only screen and (min-width: 492px) {
+    #header h1 {
+        color: #F53756;
+    }
     /* LANDING PAGE */
     #landingPage {
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/tabletImage3.jpg");
@@ -358,6 +363,9 @@ a b {
 
 @media only screen and (min-width: 1080px) {
     /* HEADER */
+    #header h1 {
+        color: #F53756;
+    }
     #header .links {
         margin-top: 20px;
     }
@@ -366,6 +374,7 @@ a b {
     .event {
         width: 20%;
     }
+
 
     /* LANIDNG PAGE */
     #landingPage {
@@ -431,5 +440,6 @@ a b {
     .creator p b {
         margin-right: 15px;
     }
+
 }
 
