--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -234,6 +234,10 @@
         display: none;
     }
 
+    .roadImage {
+        display: none;
+    }
+
     /* HEADER */
     #container {
         /* position: fixed; */
@@ -322,7 +326,6 @@
         display: inline-block;
         vertical-align: top;
         width: 45%;
-        
     }
 
     .infoRight {
@@ -399,4 +402,25 @@
         border-bottom: 2px solid gray;
         padding-bottom: 15px;
     }
+
+    .infoLeft, .infoRight {
+        display: inline-block;
+        vertical-align: top;
+        width: 300px;
+    }
+
+    .roadImage {
+        display: inline-block;
+        width: 15%;
+        height: 100px;
+        margin: 0px 50px;
+        padding: 0px;
+        /* white-space: nowrap; */
+    }
+
+    /* .roadImage {
+        display: inline-block;
+        
+        height: 50px;
+    } */
 }
