finished home page

--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -52,8 +52,18 @@
     background-color: whitesmoke;
 }
 
+#footer {
+    background-color: #363E47;
+    color: white;
+    width: 100%;
+    height: 45px;
+    text-align: center;
+    margin: 0px;
+    padding-top: 5px;
+}
 
-@media only screen and (max-width: 490px) {
+
+@media only screen and (max-width: 700px) {
     .tablet {
         display: none;
     }
@@ -141,6 +151,7 @@
 
     .event {
         padding: 0px;
+        margin: 20px 5px;
         background-color: white;
         border: 1px solid gray;
         border-radius: 3px;
@@ -208,9 +219,87 @@
         display: inline-block;
         vertical-align: top;
     }
+    
+    /* ALL AVAILABLE MEETUPS */
+    #mobileAvailableMeetups {
+        background-color: whitesmoke;
+        width: 100%;
+        padding: 20px;
+    }
+
+    .event {
+        padding: 0px;
+        background-color: white;
+        border: 1px solid gray;
+        border-radius: 3px;
+        box-shadow: 1px 1px 6px gray;
+    }
+
+    .event .date {
+        margin: 5px 10px;
+    }
+
+    .event img {
+        border-top: 1px gray solid;
+        border-bottom: 1px gray solid;
+        width: 100%;
+        height: 200px;
+        margin: 5px 0px;
+    }
+
+    .event .address {
+        font-size: 15px;
+        margin: 5px 10px 0px 10px;
+    }
+
+    .event .address a {
+        color: gray;
+    }
+
+    .event .title {
+        margin: 0px 10px 10px 10px;
+    }
+
+    .event .title a {
+        color: black;
+        text-decoration: none;
+    }
+
+    .event .title a:hover {
+        color: gray;
+    }
+
+    .goingComment {
+        padding: 0px;
+        margin: 0px;
+        width: 100%;
+        border-top: 1px solid gray;
+    }
+
+    .goingComment a {
+        padding: 5px;
+        text-decoration: none;
+        width: 45%;
+        margin: 0px;
+        display: inline-block;
+        text-align: center;
+        color: gray;
+    }
+
+    .goingComment a:hover {
+        color: black;
+    }
+
+    .goingComment a i, p {
+        margin: 5px 0px;
+        padding: 0px;
+        display: inline-block;
+        vertical-align: top;
+    }
+
 }
 
-@media only screen and (min-width: 491px) {
+@media only screen and (min-width: 701px) {
     #mobileLinks {
         display: none;
     }
@@ -259,10 +348,10 @@
 
     /* DROPDOWN MENU FOR TABLET */
     .dropdown {
-        margin-top: 5px;
         position: fixed;
         top: 0;
         right: 0;
+        margin-top: 5px;
     }
 
     .menuButton {
@@ -339,8 +428,101 @@
     .icons {
         display: inline-block;
         vertical-align: top;
+        margin-left: 30px;
     }
 
+    /* ALL AVAILABLE MEETUPS */
+    #mobileAvailableMeetups {
+        background-color: whitesmoke;
+        width: 100%;
+        padding: 20px;
+        text-align: center;
+    }
+
+    .event {
+        display: inline-block;
+        vertical-align: top;
+        width: 80%;
+        padding: 0px;
+        margin: 20px 10px; 
+        background-color: white;
+        border: 1px solid gray;
+        border-radius: 3px;
+        box-shadow: 1px 1px 6px gray;
+    }
+
+    .event .date {
+        margin: 5px 10px;
+    }
+
+    .event img {
+        border-top: 1px gray solid;
+        border-bottom: 1px gray solid;
+        width: 100%;
+        height: 200px;
+        margin: 5px 0px;
+    }
+
+    .event .address {
+        font-size: 15px;
+        margin: 5px 10px 0px 10px;
+    }
+
+    .event .address a {
+        color: gray;
+    }
+
+    .event .title {
+        margin: 0px 10px 10px 10px;
+    }
+
+    .event .title a {
+        color: black;
+        text-decoration: none;
+    }
+
+    .event .title a:hover {
+        color: gray;
+    }
+
+    .goingComment {
+        padding: 0px;
+        margin: 0px;
+        width: 100%;
+        border-top: 1px solid gray;
+    }
+
+    .goingComment a {
+        padding: 5px;
+        text-decoration: none;
+        width: 45%;
+        margin: 0px;
+        display: inline-block;
+        text-align: center;
+        color: gray;
+    }
+
+    .goingComment a:hover {
+        color: black;
+    }
+
+    .goingComment a i, p {
+        margin: 5px 0px;
+        padding: 0px;
+        display: inline-block;
+        vertical-align: top;
+    }
+
+}
+
+@media only screen and (min-width: 700px) and (max-width: 1023px) {
+    .event {
+        width: 40%
+    }
+
+    .icons {
+        margin: 0px;
+    }
 }
 
 @media only screen and (min-width: 1024px) {
@@ -411,16 +593,41 @@
 
     .roadImage {
         display: inline-block;
-        width: 15%;
-        height: 100px;
+        width: 20%;
+        height: 130px;
         margin: 0px 50px;
         padding: 0px;
         /* white-space: nowrap; */
     }
 
-    /* .roadImage {
+    #mobileAvailableMeetups {
+        padding: 0px;
+    }
+
+    #mobileAvailableMeetups h5 {
+        padding-top: 20px;
+    }
+
+    #mobileAvailableMeetups .event {
+        width: 25%;
+        margin: 20px;
+    }
+
+    #mobileAvailableMeetups .event p {
+        font-size: 11pt;
+    }
+
+    #mobileAvailableMeetups .goingComment a p {
+        font-size: 8pt;
+    }
+
+    .icons {
         display: inline-block;
-        
-        height: 50px;
-    } */
+        vertical-align: top;
+        margin: 0px;
+    }
+
+    .address, .title {
+        display: block;
+    }
 }
