--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -65,7 +65,7 @@
         
         <div id="mobileUpcomingEvent">
 
-            <h5><strong>Your Next Meetup</strong></h5>
+            <h5><strong>YOUR NEXT MEETUP</strong></h5>
 
             <div class="event">
 
@@ -96,7 +96,7 @@
             <hr>
             <div class="infoLeft">
                 <h1><b>San Felipe Road</b></h1>
-                <h5>San Jose, CA <br> <i class="fas fa-motorcycle"></i> 30 Riders Going</h5>
+                <h5>San Jose, CA <br><br> <i class="fas fa-motorcycle"></i> 30 Riders Going</h5>
             </div>
 
             <img class="roadImage" src="../static/images/roadImage.png" alt="">
@@ -113,12 +113,122 @@
                 <h5>3095 Yerba Buena Rd. <br> San Jose, CA 95127</h5>
                 
             </div>
-            <!-- <img class="roadImage" src="../static/images/roadImage.png" alt=""> -->
         </div>
 
-        <!-- <div id="desktopUpcomingEvent"></div> -->
+        <div id="mobileAvailableMeetups">
 
-        <br><br><br><br>
+            <h5><strong>ALL AVAILABLE MEETUPS</strong></h5>
+
+            <div class="event">
+
+                <p class="date">Friday, December 25, 2019, 5:00 PM</p>
+                <img src="../static/images/routeImage.png" alt="">
+                <p class="address"><a href="#">3095 Yerba Buena Rd, San Jose, CA 95135</a></p>
+                <p class="title"><a href="eventDetails">San Felipe Road</a></p>
+
+                <div class="goingComment">
+                    <a href="eventDetails.html">
+                        <i class="fas fa-motorcycle"></i>
+                        <p>30 Riders Going</p>
+                    </a>
+
+                    <a class="comment" href="eventDetails.html">
+                        <i class="fas fa-comment-alt"></i>
+                        <p>Comment</p>
+                    </a>
+                </div>
+                
+            </div>
+
+            <div class="event">
+
+                <p class="date">Friday, December 25, 2019, 5:00 PM</p>
+                <img src="../static/images/routeImage.png" alt="">
+                <p class="address"><a href="#">3095 Yerba Buena Rd, San Jose, CA 95135</a></p>
+                <p class="title"><a href="eventDetails">San Felipe Road</a></p>
+
+                <div class="goingComment">
+                    <a href="eventDetails.html">
+                        <i class="fas fa-motorcycle"></i>
+                        <p>30 Riders Going</p>
+                    </a>
+
+                    <a class="comment" href="eventDetails.html">
+                        <i class="fas fa-comment-alt"></i>
+                        <p>Comment</p>
+                    </a>
+                </div>
+                
+            </div>
+
+            <div class="event">
+
+                <p class="date">Friday, December 25, 2019, 5:00 PM</p>
+                <img src="../static/images/routeImage.png" alt="">
+                <p class="address"><a href="#">3095 Yerba Buena Rd, San Jose, CA 95135</a></p>
+                <p class="title"><a href="eventDetails">San Felipe Road</a></p>
+
+                <div class="goingComment">
+                    <a href="eventDetails.html">
+                        <i class="fas fa-motorcycle"></i>
+                        <p>30 Riders Going</p>
+                    </a>
+
+                    <a class="comment" href="eventDetails.html">
+                        <i class="fas fa-comment-alt"></i>
+                        <p>Comment</p>
+                    </a>
+                </div>
+                
+            </div>
+
+            <div class="event">
+
+                <p class="date">Friday, December 25, 2019, 5:00 PM</p>
+                <img src="../static/images/routeImage.png" alt="">
+                <p class="address"><a href="#">3095 Yerba Buena Rd, San Jose, CA 95135</a></p>
+                <p class="title"><a href="eventDetails">San Felipe Road</a></p>
+
+                <div class="goingComment">
+                    <a href="eventDetails.html">
+                        <i class="fas fa-motorcycle"></i>
+                        <p>30 Riders Going</p>
+                    </a>
+
+                    <a class="comment" href="eventDetails.html">
+                        <i class="fas fa-comment-alt"></i>
+                        <p>Comment</p>
+                    </a>
+                </div>
+                
+            </div>
+
+            <div class="event">
+
+                <p class="date">Friday, December 25, 2019, 5:00 PM</p>
+                <img src="../static/images/routeImage.png" alt="">
+                <p class="address"><a href="#">3095 Yerba Buena Rd, San Jose, CA 95135</a></p>
+                <p class="title"><a href="eventDetails">San Felipe Road</a></p>
+
+                <div class="goingComment">
+                    <a href="eventDetails.html">
+                        <i class="fas fa-motorcycle"></i>
+                        <p>30 Riders Going</p>
+                    </a>
+
+                    <a class="comment" href="eventDetails.html">
+                        <i class="fas fa-comment-alt"></i>
+                        <p>Comment</p>
+                    </a>
+                </div>
+                
+            </div>
+
+        </div>
+        
+        <div id="footer">
+            <p>2Wheel Meetups &reg; by Gustavo Arellano<p>
+        </div>
         
         <p class="mobile">Mobile View</p>
         <p class="tablet">Tablet View</p>
