--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -513,6 +513,10 @@
         vertical-align: top;
     }
 
+    #mobileAvailableMeetups .goingComment a p {
+        font-size: 8pt;
+    }
+
 }
 
 @media only screen and (min-width: 700px) and (max-width: 1023px) {
@@ -609,7 +613,7 @@
     }
 
     #mobileAvailableMeetups .event {
-        width: 25%;
+        width: 20%;
         margin: 20px;
     }
 
