--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -115,10 +115,11 @@
             </div>
         </div>
 
+        <h6><a href="."></a></h6>
+
         <div id="mobileAvailableMeetups">
 
             <h5><strong>ALL AVAILABLE MEETUPS</strong></h5>
-
             <div class="event">
 
                 <p class="date">Friday, December 25, 2019, 5:00 PM</p>
@@ -225,7 +226,7 @@
             </div>
 
         </div>
-        
+
         <div id="footer">
             <p>2Wheel Meetups &reg; by Gustavo Arellano<p>
         </div>
