--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -19,9 +19,9 @@
 
                 <div id="links">
                     <ul>
-                        <li><a href="userProfile.html">Profile</a></li>
+                        <li><a href="profile.html">Profile</a></li>
                         <li><a href="explore.html">Explore</a></li>
-                        <li><a href="upcoming.html">Upcoming Meetup</a></li>
+                        <li><a href="create.html">Create</a></li>
                         <li><a href="index.html">Sign Out</a></li>
                     </ul>
                 </div>
@@ -31,9 +31,9 @@
                     <button onclick="myFunction()" class="menuButton"><i class="fas fa-bars"></i> MENU</button>
 
                     <div id="tabletDropdown" class="dropdown-content">
-                        <a href="userProfile.html">Profile</a>
+                        <a href="profile.html">Profile</a>
                         <a href="explore.html">Explore</a>
-                        <a href="upcoming.html">Upcoming Meetup</a>
+                        <a href="create.html">Create</a>
                         <a href="index.html">Sign Out</a>
                     </div>
 
@@ -51,9 +51,9 @@
                     <i class="fas fa-search fa-2x"></i>
                     <p>Explore</p>
                 </a>
-                <a href="upcoming.html">
-                    <i class="fas fa-calendar-alt fa-2x"></i>
-                    <p>Upcoming</p>
+                <a href="create.html">
+                    <i class="fas fa-motorcycle fa-2x"></i>
+                    <p>Create</p>
                 </a>
                 <a href="welcome.html">
                     <i class="fas fa-sign-out-alt fa-2x"></i>
@@ -72,15 +72,15 @@
                 <p class="date">Friday, December 25, 2019, 5:00 PM</p>
                 <img src="../static/images/routeImage.png" alt="">
                 <p class="address"><a href="#">3095 Yerba Buena Rd, San Jose, CA 95135</a></p>
-                <p class="title"><a href="eventDetails">San Felipe Road</a></p>
+                <p class="title"><a href="eventDetail.html">San Felipe Road</a></p>
 
                 <div class="goingComment">
-                    <a href="eventDetails.html">
+                    <a href="eventDetail.html">
                         <i class="fas fa-motorcycle"></i>
                         <p>30 Riders Going</p>
                     </a>
 
-                    <a class="comment" href="eventDetails.html">
+                    <a class="comment" href="eventDetail.html">
                         <i class="fas fa-comment-alt"></i>
                         <p>Comment</p>
                     </a>
@@ -125,15 +125,15 @@
                 <p class="date">Friday, December 25, 2019, 5:00 PM</p>
                 <img src="../static/images/routeImage.png" alt="">
                 <p class="address"><a href="#">3095 Yerba Buena Rd, San Jose, CA 95135</a></p>
-                <p class="title"><a href="eventDetails">San Felipe Road</a></p>
+                <p class="title"><a href="eventDetail.html">San Felipe Road</a></p>
 
                 <div class="goingComment">
-                    <a href="eventDetails.html">
+                    <a href="eventDetail.html">
                         <i class="fas fa-motorcycle"></i>
                         <p>30 Riders Going</p>
                     </a>
 
-                    <a class="comment" href="eventDetails.html">
+                    <a class="comment" href="eventDetail.html">
                         <i class="fas fa-comment-alt"></i>
                         <p>Comment</p>
                     </a>
@@ -154,7 +154,7 @@
                         <p>30 Riders Going</p>
                     </a>
 
-                    <a class="comment" href="eventDetails.html">
+                    <a class="comment" href="eventDetail.html">
                         <i class="fas fa-comment-alt"></i>
                         <p>Comment</p>
                     </a>
