--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -63,30 +63,25 @@
     margin-top: 20px;
 }
 
-
-@media only screen and (max-width: 700px) {
-    .tablet {
-        display: none;
-    }
-    .desktop {
-        display: none;
-    }
-
-    #desktopUpcomingEvent {
-        display: none;
+    #footer {
+        background-color: #363E47;
+        color: white;
+        width: 100%;
+        height: 45px;
+        text-align: center;
+        margin: 0px;
+        padding-top: 10px;
     }
 
+
+@media only screen and (max-width: 480px) {
     .dropdown {
-        display: none;
-    }
-
-    #tabletUpcomingEvent {
         display: none;
     }
 
     #container {
         position: fixed;
-        width: 100%
+        width: 100%;
     }
 
     /* HEADER */
@@ -110,7 +105,7 @@
         text-align: center;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-evenly;
         width: 100%;
         margin: auto;
         padding: 5px 0px;
@@ -139,180 +134,43 @@
         display: block;
     }
 
-    /* UPCOMING EVENT */
-    #mobileUpcomingEvent h5 {
-        margin-top: 110px;
-    }
-
-    #mobileUpcomingEvent {
-        display: block;
-        margin: 0px;
+    /* PROFILE VIEW */
+    #mobileProfileView {
         background-color: whitesmoke;
-        width: 100%;
-        padding: 20px;
-    }
-
-    .event {
-        padding: 0px;
-        margin: 20px 5px;
-        background-color: white;
-        border: 1px solid gray;
-        border-radius: 3px;
-        box-shadow: 1px 1px 6px gray;
-    }
-
-    .event .date {
-        margin: 5px 10px;
-    }
-
-    .event img {
-        border-top: 1px gray solid;
-        border-bottom: 1px gray solid;
-        width: 100%;
-        height: 200px;
-        margin: 5px 0px;
-    }
-
-    .event .address {
-        font-size: 15px;
-        margin: 5px 10px 0px 10px;
-    }
-
-    .event .address a {
-        color: gray;
-    }
-
-    .event .title {
-        margin: 0px 10px 10px 10px;
-    }
-
-    .event .title a {
-        color: black;
-        text-decoration: none;
-    }
-
-    .event .title a:hover {
-        color: gray;
-    }
-
-    .goingComment {
-        padding: 0px;
-        margin: 0px;
-        width: 100%;
-        border-top: 1px solid gray;
-    }
-
-    .goingComment a {
-        padding: 5px;
-        text-decoration: none;
-        width: 45%;
-        margin: 0px;
-        display: inline-block;
-        text-align: center;
-        color: gray;
-    }
-
-    .goingComment a:hover {
-        color: black;
-    }
-
-    .goingComment a i, p {
-        margin: 5px 0px;
-        padding: 0px;
-        display: inline-block;
-        vertical-align: top;
-    }
-    
-    /* ALL AVAILABLE MEETUPS */
-    #mobileAvailableMeetups {
-        background-color: whitesmoke;
-        width: 100%;
-        padding: 20px;
+        padding: 25px;
+        margin-bottom: 0px;
         display: block;
-        margin-top: -10px;
+        height: 100vh;
     }
 
-    .event {
-        padding: 0px;
-        background-color: white;
-        border: 1px solid gray;
-        border-radius: 3px;
-        box-shadow: 1px 1px 6px gray;
+    #mobileProfileView img {
+        margin: 0px 10px;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
     }
 
-    .event .date {
-        margin: 5px 10px;
-    }
-
-    .event img {
-        border-top: 1px gray solid;
-        border-bottom: 1px gray solid;
-        width: 100%;
-        height: 200px;
-        margin: 5px 0px;
-    }
-
-    .event .address {
-        font-size: 15px;
-        margin: 5px 10px 0px 10px;
-    }
-
-    .event .address a {
-        color: gray;
-    }
-
-    .event .title {
-        margin: 0px 10px 10px 10px;
-    }
-
-    .event .title a {
-        color: black;
-        text-decoration: none;
-    }
-
-    .event .title a:hover {
-        color: gray;
-    }
-
-    .goingComment {
-        padding: 0px;
-        margin: 0px;
-        width: 100%;
-        border-top: 1px solid gray;
-    }
-
-    .goingComment a {
-        padding: 5px;
-        text-decoration: none;
-        width: 45%;
-        margin: 0px;
-        display: inline-block;
+    #mobileProfileView .title, .details {
         text-align: center;
-        color: gray;
+        display: block;
     }
 
-    .goingComment a:hover {
-        color: black;
+    .title {
+        margin-top: 120px;
     }
 
-    .goingComment a i, p {
-        margin: 5px 0px;
-        padding: 0px;
-        display: inline-block;
-        vertical-align: top;
+    .details {
+        padding: 20px;
+        margin: 50px 0px;
+        background-color: white;
+        border: 1px gray solid;
+        box-shadow: 1px 1px 4px gray; 
     }
 
 }
 
-@media only screen and (min-width: 701px) {
+@media only screen and (min-width: 481px) {
     #mobileLinks {
-        display: none;
-    }
-
-    .mobile {
-        display: none;
-    }
-    .desktop {
         display: none;
     }
 
@@ -321,14 +179,6 @@
     }
 
     #links {
-        display: none;
-    }
-
-    #mobileUpcomingEvent {
-        display: none;
-    }
-
-    .roadImage {
         display: none;
     }
 
@@ -402,6 +252,39 @@
         display: block;
     }
 
+    /* PROFILE VIEW */
+    #mobileProfileView {
+        background-color: white;
+        padding: 25px;
+        margin: 0px;
+        display: block;
+        height: 100vh;
+        width: 100%;
+    }
+
+    #mobileProfileView img {
+        margin: 0px 10px;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+    }
+
+    #mobileProfileView .title, .details {
+        text-align: center;
+        display: block;
+    }
+
+    .details {
+        margin: auto;
+        margin-top: 50px;
+        width: 400px;
+        padding: 20px;
+        background-color: whitesmoke;
+        border: 1px gray solid;
+        box-shadow: 1px 1px 4px gray; 
+    }
+
+
 }
 
 @media only screen and (min-width: 1024px) {
@@ -410,14 +293,6 @@
     }
 
     #mobileUpcomingEvent{
-        display: none;
-    }
-
-    .mobile {
-        display: none;
-    }
-
-    .tablet {
         display: none;
     }
 
@@ -462,6 +337,31 @@
     #links ul li a:hover {
         border-bottom: 2px solid gray;
         padding-bottom: 15px;
+    }
+
+    /* PROFILE VIEW */
+    #mobilePorfileView {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    .title h2 {
+        font-size: 45pt;
+    }
+
+    .title p {
+        font-size: 25pt;
+    }
+
+    #mobileProfileView .title img {
+        width: 250px;
+        height: 250px;
+    }
+
+    .details {
+        margin: auto;
+        margin-top: 50px;
+        width: 500px;
     }
 
 }
