--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,7 +13,6 @@
     </head>
 
     <body>
-        <h1>hi profile</h1>
         <div id="container">
             <div id="header">
                 <h1><strong>2Wheel Meetups</strong></h1>
@@ -62,6 +61,27 @@
                 </a>
             
             </div>
+        </div>
+
+        <div id="mobileProfileView">
+            <div class="title">
+                <h2>Gustavo Arellano</h2>
+                <p>San Jose, CA</p>
+                <img src="../static/images/placeholder.png" alt="">
+            </div>
+            
+            <div class="details">
+                <h4>Member Since</h4>
+                <p><i class="fas fa-calendar-alt"></i> Oct 2018 <i class="fas fa-calendar-alt"></i></p>
+                <br>
+                <h4>Rides Attended</h4>
+                <p><i class="fas fa-motorcycle"></i> 60 <i class="fas fa-motorcycle"></i></p>
+            </div>
+
+        </div>
+
+        <div id="footer">
+            <p>2Wheel Meetups &reg; by Gustavo Arellano<p>
         </div>
 
     </body>
