--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -55,7 +55,7 @@
                     <i class="fas fa-motorcycle fa-2x"></i>
                     <p>Create</p>
                 </a>
-                <a href="welcome.html">
+                <a href="index.html">
                     <i class="fas fa-sign-out-alt fa-2x"></i>
                     <p>Sign Out</p>
                 </a>
