--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -60,19 +60,8 @@
     text-align: center;
     margin: 0px;
     padding-top: 5px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
-
-    #footer {
-        background-color: #363E47;
-        color: white;
-        width: 100%;
-        height: 45px;
-        text-align: center;
-        margin: 0px;
-        padding-top: 10px;
-    }
-
 
 @media only screen and (max-width: 480px) {
     .dropdown {
