added footer and header to all pages

--- a/templates/create.html
+++ b/templates/create.html
@@ -4,50 +4,46 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>2Wheel Meetups - create</title>
+        <title>2Wheel Meetups - Create</title>
         <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Josefin+Sans|Pacifico" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="../static/css/create.css">
-        <script src="../js/create.js"></script>
+        <script src="../js/welcome.js"></script>
     </head>
 
     <body>
-        <h1>hi create</h1>
+        <h1>hellow create</h1>
         <div id="container">
             <div id="header">
                 <h1><strong>2Wheel Meetups</strong></h1>
 
                 <div id="links">
                     <ul>
-                        <li><a href="profile.html">Home</a></li>
                         <li><a href="profile.html">Profile</a></li>
                         <li><a href="explore.html">Explore</a></li>
+                        <li><a href="create.html">Create</a></li>
                         <li><a href="index.html">Sign Out</a></li>
                     </ul>
                 </div>
-    
+
                 <div class="dropdown">
 
                     <button onclick="myFunction()" class="menuButton"><i class="fas fa-bars"></i> MENU</button>
 
                     <div id="tabletDropdown" class="dropdown-content">
-                        <a href="welcome.html">Home</a>
                         <a href="profile.html">Profile</a>
                         <a href="explore.html">Explore</a>
+                        <a href="create.html">Create</a>
                         <a href="index.html">Sign Out</a>
                     </div>
 
                 </div>
 
             </div>
-    
+
             <div id="mobileLinks">
 
-                <a href="welcome.html">
-                    <i class="fas fa-home fa-2x"></i>
-                    <p>Home</p>
-                </a>
                 <a href="profile.html">
                     <i class="fas fa-user fa-2x"></i>
                     <p>Profile</p>
@@ -56,12 +52,20 @@
                     <i class="fas fa-search fa-2x"></i>
                     <p>Explore</p>
                 </a>
-                <a href="welcome.html">
+                <a href="create.html">
+                    <i class="fas fa-motorcycle fa-2x"></i>
+                    <p>Create</p>
+                </a>
+                <a href="index.html">
                     <i class="fas fa-sign-out-alt fa-2x"></i>
                     <p>Sign Out</p>
                 </a>
             
             </div>
+        </div>
+        <br><br><br><br><br>
+        <div id="footer">
+            <p>2Wheel Meetups &reg; by Gustavo Arellano<p>
         </div>
 
     </body>
