--- a/templates/explore.html
+++ b/templates/explore.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>hi explore</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>2Wheel Meetups - EXPLORE</title>
+        <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Josefin+Sans|Pacifico" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <link rel="stylesheet" href="../static/css/explore.css">
+        <script src="../js/welcome.js"></script>
+    </head>
+
+    <body>
+        <h1>hello explore</h1>
+        <div id="container">
+            <div id="header">
+                <h1><strong>2Wheel Meetups</strong></h1>
+
+                <div id="links">
+                    <ul>
+                        <li><a href="profile.html">Profile</a></li>
+                        <li><a href="explore.html">Explore</a></li>
+                        <li><a href="create.html">Create</a></li>
+                        <li><a href="index.html">Sign Out</a></li>
+                    </ul>
+                </div>
+
+                <div class="dropdown">
+
+                    <button onclick="myFunction()" class="menuButton"><i class="fas fa-bars"></i> MENU</button>
+
+                    <div id="tabletDropdown" class="dropdown-content">
+                        <a href="profile.html">Profile</a>
+                        <a href="explore.html">Explore</a>
+                        <a href="create.html">Create</a>
+                        <a href="index.html">Sign Out</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div id="mobileLinks">
+
+                <a href="profile.html">
+                    <i class="fas fa-user fa-2x"></i>
+                    <p>Profile</p>
+                </a>
+                <a href="explore.html">
+                    <i class="fas fa-search fa-2x"></i>
+                    <p>Explore</p>
+                </a>
+                <a href="create.html">
+                    <i class="fas fa-motorcycle fa-2x"></i>
+                    <p>Create</p>
+                </a>
+                <a href="index.html">
+                    <i class="fas fa-sign-out-alt fa-2x"></i>
+                    <p>Sign Out</p>
+                </a>
+            
+            </div>
+        </div>
+        <br><br><br><br><br>
+        <div id="footer">
+            <p>2Wheel Meetups &reg; by Gustavo Arellano<p>
+        </div>
+
+    </body>
 </html>
