--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -110,7 +110,7 @@
         text-align: center;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-evenly;
         width: 100%;
         margin: auto;
         padding: 5px 0px;
