--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -55,12 +55,13 @@
 #footer {
     background-color: #363E47;
     color: white;
-    width: 100%;
-    height: 45px;
-    text-align: center;
-    margin: 0px;
-    padding-top: 5px;
-    /* margin-top: 20px; */
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+}
+
+#footer p {
+    margin: 10px;
 }
 
 
