added search form to exlore

--- a/templates/explore.html
+++ b/templates/explore.html
@@ -13,7 +13,6 @@
     </head>
 
     <body>
-        <h1>hello explore</h1>
         <div id="container">
             <div id="header">
                 <h1><strong>2Wheel Meetups</strong></h1>
@@ -63,7 +62,16 @@
             
             </div>
         </div>
-        <br><br><br><br><br>
+
+        <div id="search">
+            <form action="#">
+                <p>Enter Zip Code</p>
+                <input type="text">
+            </form>
+
+            <button type="button" class="btn btn-danger">Search</button>
+        </div>
+
         <div id="footer">
             <p>2Wheel Meetups &reg; by Gustavo Arellano<p>
         </div>
