--- a/static/css/explore.css
+++ b/static/css/explore.css
@@ -47,17 +47,19 @@
     padding-bottom: 15px;
 }
 
-/* #footer {
-    background-color: #363E47;
-    color: white;
-    width: 100%;
-    height: 45px;
+#search {
     text-align: center;
-    margin: 0px;
-    padding-top: 5px;
-    /* margin-top: 20px; 
-}  */
+    margin-top: 50px;
+    width: 100%;
+    height: 100vh;
+}
 
+#search button {
+    margin: 25px;
+}
+
+
+/* FOOTER */
 #footer {
     background-color: #363E47;
     color: white;
@@ -69,6 +71,7 @@
 #footer p {
     margin: 10px;
 }
+
 
 @media only screen and (max-width: 700px) {
     .tablet {
@@ -91,11 +94,10 @@
     }
 
     #container {
+        top: 0px;
         position: fixed;
         width: 100%
     }
-
-    .footer
 
     /* HEADER */
     #header {
@@ -130,13 +132,13 @@
         text-decoration: none;
         color: gray;
         padding: 0px;
-        margin: 5px 22px 0px 22px;
+        margin: 5px 10px 0px 10px;
         display: inline-block;
         vertical-align: top;
     }
 
     #mobileLinks p {
-        font-size: 9pt;
+        font-size: 10pt;
     }
 
     #mobileLinks a:hover {
@@ -146,6 +148,198 @@
     #mobileLinks a p, i {
         display: block;
     }
+
+    /*SEARCH*/
+    #search {
+        margin-top: 150px;
+        text-align: center;
+    }
+
+    input {
+        width: 100px;
+    }
+
+    #search {
+        height: 100vh;
+    }
+
+    #search form input {
+        margin: 0px;
+        padding: 0px;
+    }
+
+    #search form, button {
+        display: inline-block;
+    }
+
+    #search button {
+        margin: 0px;
+        padding: 3px;
+        height: 30px;
+    }
+    /* UPCOMING EVENT */
+    #mobileUpcomingEvent h5 {
+        margin-top: 110px;
+    }
+
+    #mobileUpcomingEvent {
+        display: block;
+        margin: 0px;
+        background-color: whitesmoke;
+        width: 100%;
+        padding: 20px;
+    }
+
+    .event {
+        padding: 0px;
+        margin: 20px 5px;
+        background-color: white;
+        border: 1px solid gray;
+        border-radius: 3px;
+        box-shadow: 1px 1px 6px gray;
+    }
+
+    .event .date {
+        margin: 5px 10px;
+    }
+
+    .event img {
+        border-top: 1px gray solid;
+        border-bottom: 1px gray solid;
+        width: 100%;
+        height: 200px;
+        margin: 5px 0px;
+    }
+
+    .event .address {
+        font-size: 15px;
+        margin: 5px 10px 0px 10px;
+    }
+
+    .event .address a {
+        color: gray;
+    }
+
+    .event .title {
+        margin: 0px 10px 10px 10px;
+    }
+
+    .event .title a {
+        color: black;
+        text-decoration: none;
+    }
+
+    .event .title a:hover {
+        color: gray;
+    }
+
+    .goingComment {
+        padding: 0px;
+        margin: 0px;
+        width: 100%;
+        border-top: 1px solid gray;
+    }
+
+    .goingComment a {
+        padding: 5px;
+        text-decoration: none;
+        width: 45%;
+        margin: 0px;
+        display: inline-block;
+        text-align: center;
+        color: gray;
+    }
+
+    .goingComment a:hover {
+        color: black;
+    }
+
+    .goingComment a i, p {
+        margin: 5px 0px;
+        padding: 0px;
+        display: inline-block;
+        vertical-align: top;
+    }
+    
+    /* ALL AVAILABLE MEETUPS */
+    #mobileAvailableMeetups {
+        background-color: whitesmoke;
+        width: 100%;
+        padding: 20px;
+        display: block;
+        margin-top: -10px;
+    }
+
+    .event {
+        padding: 0px;
+        background-color: white;
+        border: 1px solid gray;
+        border-radius: 3px;
+        box-shadow: 1px 1px 6px gray;
+    }
+
+    .event .date {
+        margin: 5px 10px;
+    }
+
+    .event img {
+        border-top: 1px gray solid;
+        border-bottom: 1px gray solid;
+        width: 100%;
+        height: 200px;
+        margin: 5px 0px;
+    }
+
+    .event .address {
+        font-size: 15px;
+        margin: 5px 10px 0px 10px;
+    }
+
+    .event .address a {
+        color: gray;
+    }
+
+    .event .title {
+        margin: 0px 10px 10px 10px;
+    }
+
+    .event .title a {
+        color: black;
+        text-decoration: none;
+    }
+
+    .event .title a:hover {
+        color: gray;
+    }
+
+    .goingComment {
+        padding: 0px;
+        margin: 0px;
+        width: 100%;
+        border-top: 1px solid gray;
+    }
+
+    .goingComment a {
+        padding: 5px;
+        text-decoration: none;
+        width: 45%;
+        margin: 0px;
+        display: inline-block;
+        text-align: center;
+        color: gray;
+    }
+
+    .goingComment a:hover {
+        color: black;
+    }
+
+    .goingComment a i, p {
+        margin: 5px 0px;
+        padding: 0px;
+        display: inline-block;
+        vertical-align: top;
+    }
+
 }
 
 @media only screen and (min-width: 701px) {
@@ -245,6 +439,7 @@
     .show {
         display: block;
     }
+
 }
 
 @media only screen and (min-width: 1024px) {
@@ -306,4 +501,5 @@
         border-bottom: 2px solid gray;
         padding-bottom: 15px;
     }
+
 }
