--- a/templates/eventDetail.html
+++ b/templates/eventDetail.html
@@ -69,6 +69,10 @@
             
             </div>
         </div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div id="footer">
+                <p>2Wheel Meetups &reg; by Gustavo Arellano<p>
+        </div>
 
     </body>
 </html>
