--- a/templates/create.html
+++ b/templates/create.html
@@ -13,7 +13,6 @@
     </head>
 
     <body>
-        <h1>hellow create</h1>
         <div id="container">
             <div id="header">
                 <h1><strong>2Wheel Meetups</strong></h1>
@@ -63,7 +62,30 @@
             
             </div>
         </div>
-        <br><br><br><br><br>
+        <div class="createPage">
+
+            <h1>Create Event</h1>
+
+            <form class="createForm" action="welcome.html">
+                <p>Date:</p>
+                <input type="text">
+
+                <p>Location:</p>
+                <input type="text">
+
+                <p>Zip Code:</p>
+                <input type="number">
+
+                <p>Title:</p>
+                <input type="text"> 
+
+                <p>Description:</p>
+                <input type="text"> 
+            </form>
+
+            <button type="button" class="btn btn-danger"><a href="welcome.html">SIGN UP</a></button>
+        </div>
+
         <div id="footer">
             <p>2Wheel Meetups &reg; by Gustavo Arellano<p>
         </div>
