--- a/templates/explore.html
+++ b/templates/explore.html
@@ -70,6 +70,7 @@
             </form>
 
             <button type="button" class="btn btn-danger">Search</button>
+            <p>[DISPLAY ALL EVENTS BELOW BY ZIP CODE SEARCH]</p>
         </div>
 
         <div id="footer">
