--- a/static/css/create.css
+++ b/static/css/create.css
@@ -47,10 +47,51 @@
     padding-bottom: 15px;
 }
 
-/* UPCOMING */
-#upcomingEvent {
-    background-color: whitesmoke;
+/* FORM */
+.createPage {
+    min-height: 100vh;
+    height: 100%;
+    text-align: center;
 }
+
+.createForm {
+    width: 330px;
+    height: 450px;
+    background-color: rgb(245, 245, 245);
+    padding: 5px;
+    margin: 0px auto;
+    border-radius: 5px;
+    box-shadow: 2px 2px 6px rgba(19, 19, 19, 0.945);
+}
+
+.createForm h1 {
+    margin-top: 15px;
+}
+
+.createForm p {
+    margin: 0px;
+    margin-top: 20px;
+}
+
+.createForm input {
+    height: 30px;
+    width: 300px;
+    margin-top: 5px;
+    border-radius: 5px;
+    font-size: 10pt;
+}
+
+.btn {
+    margin: 50px 0px;
+    display: block;
+}
+
+.btn a {
+    color: white;
+    text-decoration: none;
+}
+
+
 
 #footer {
     background-color: #363E47;
@@ -138,169 +179,6 @@
 
     #mobileLinks a p, i {
         display: block;
-    }
-
-    /* UPCOMING EVENT */
-    #mobileUpcomingEvent h5 {
-        margin-top: 110px;
-    }
-
-    #mobileUpcomingEvent {
-        display: block;
-        margin: 0px;
-        background-color: whitesmoke;
-        width: 100%;
-        padding: 20px;
-    }
-
-    .event {
-        padding: 0px;
-        margin: 20px 5px;
-        background-color: white;
-        border: 1px solid gray;
-        border-radius: 3px;
-        box-shadow: 1px 1px 6px gray;
-    }
-
-    .event .date {
-        margin: 5px 10px;
-    }
-
-    .event img {
-        border-top: 1px gray solid;
-        border-bottom: 1px gray solid;
-        width: 100%;
-        height: 200px;
-        margin: 5px 0px;
-    }
-
-    .event .address {
-        font-size: 15px;
-        margin: 5px 10px 0px 10px;
-    }
-
-    .event .address a {
-        color: gray;
-    }
-
-    .event .title {
-        margin: 0px 10px 10px 10px;
-    }
-
-    .event .title a {
-        color: black;
-        text-decoration: none;
-    }
-
-    .event .title a:hover {
-        color: gray;
-    }
-
-    .goingComment {
-        padding: 0px;
-        margin: 0px;
-        width: 100%;
-        border-top: 1px solid gray;
-    }
-
-    .goingComment a {
-        padding: 5px;
-        text-decoration: none;
-        width: 45%;
-        margin: 0px;
-        display: inline-block;
-        text-align: center;
-        color: gray;
-    }
-
-    .goingComment a:hover {
-        color: black;
-    }
-
-    .goingComment a i, p {
-        margin: 5px 0px;
-        padding: 0px;
-        display: inline-block;
-        vertical-align: top;
-    }
-    
-    /* ALL AVAILABLE MEETUPS */
-    #mobileAvailableMeetups {
-        background-color: whitesmoke;
-        width: 100%;
-        padding: 20px;
-        display: block;
-        margin-top: -10px;
-    }
-
-    .event {
-        padding: 0px;
-        background-color: white;
-        border: 1px solid gray;
-        border-radius: 3px;
-        box-shadow: 1px 1px 6px gray;
-    }
-
-    .event .date {
-        margin: 5px 10px;
-    }
-
-    .event img {
-        border-top: 1px gray solid;
-        border-bottom: 1px gray solid;
-        width: 100%;
-        height: 200px;
-        margin: 5px 0px;
-    }
-
-    .event .address {
-        font-size: 15px;
-        margin: 5px 10px 0px 10px;
-    }
-
-    .event .address a {
-        color: gray;
-    }
-
-    .event .title {
-        margin: 0px 10px 10px 10px;
-    }
-
-    .event .title a {
-        color: black;
-        text-decoration: none;
-    }
-
-    .event .title a:hover {
-        color: gray;
-    }
-
-    .goingComment {
-        padding: 0px;
-        margin: 0px;
-        width: 100%;
-        border-top: 1px solid gray;
-    }
-
-    .goingComment a {
-        padding: 5px;
-        text-decoration: none;
-        width: 45%;
-        margin: 0px;
-        display: inline-block;
-        text-align: center;
-        color: gray;
-    }
-
-    .goingComment a:hover {
-        color: black;
-    }
-
-    .goingComment a i, p {
-        margin: 5px 0px;
-        padding: 0px;
-        display: inline-block;
-        vertical-align: top;
     }
 
 }
