--- a/static/css/index.css
+++ b/static/css/index.css
@@ -211,7 +211,7 @@ a b {
     padding-top: 5px;
 }
 
-@media only screen and (max-width: 491px) {
+@media only screen and (max-width: 549px) {
     /* HEADER */
     #header {
         background-color: white;
@@ -274,6 +274,7 @@ a b {
     #howItWorks {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
     }
 
     .find {
@@ -291,7 +292,7 @@ a b {
     }  
 }
 
-@media only screen and (min-width: 492px) {
+@media only screen and (min-width: 550px) {
     #header h1 {
         color: #F53756;
     }
@@ -320,7 +321,7 @@ a b {
         padding: 0px;
         width: 150px;
         height: 40px;
-        box-shadow: 1px 1px 6px rgb(0, 0, 0.5);
+        box-shadow: 1px 1px 6px black;
     }
 
     /* UPCOMING EVENTS */
@@ -415,7 +416,7 @@ a b {
     #landingPage .btn {
         width: 200px;
         height: 40px;
-        box-shadow: 1px 1px 6px rgb(0, 0, 0.5);
+        box-shadow: 1px 1px 4px black;
     }
 
     /* EVENT */
